--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <img class="box_image" src="sitting.jpg" onclick="show_game()">
             </div>
             <div id="crediting" class="selection_box">
-                <img class="box_image" src="madeline.png" onclick="show_credits()">
+                <img class="box_image" src="madeline.PNG" onclick="show_credits()">
             </div>
             <div id="music_box" class="selection_box">
-                <img class="box_image" src="manul.png" onclick="play_music()">
+                <img class="box_image" src="manul.PNG" onclick="play_music()">
             </div>
         </div>
         <div id="about">
