--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
                   <p>Going over things that I find very interesting, that would be games of all kinds, programming, being outside, and finding weird niche music artists to listen to! Just a couple things! Current games I'm super into right now are Celeste and Milk outside a bag of milk outside a bag of milk. Celeste is a difficult platformer and Milk is just a strange visual novel, which I adore for unexplainable reasons. (The page you were just on is actually from the game!)</p>
                 </div>
                 <div class="section">
-                    <p>Something kind of important to bring up is that I have a tendency to go for perfection or nothing at all, this site represents that very well. Me spending hours working on the main functions and then forgetting about everything.</p>
-                </div>
-                <div class="section">
-                    <p>Beyond that, I love animals so much, basically all of them. I love cats a ton, but so many of them are just interesting and unique to me. I also love the ocean! That's about all I feel like bringing up, bawomp for this page looking so dull.</p>
+                    <p>Something kind of important to bring up is that I have a tendency to go for perfection or nothing at all, this site represents that very well. Me spending hours working on the main functions and then forgetting about everything. Beyond that, I love animals so much, basically all of them. I love cats a ton, but so many of them are just interesting and unique to me. I also love the ocean! That's about all I feel like bringing up, bawomp for this page looking so dull.</p>
                 </div>
               </div>
         </div>
